# puddle

./: Cargo.toml  Dioxus.toml  README.md
.github/workflows/: pages.yml
src/: app.rs  error.rs  main.rs
src/components/: current_weather.rs  forecast_list.rs  mod.rs  search_bar.rs  status_banner.rs
src/models/: location.rs  mod.rs  open_meteo_dto.rs  weather.rs
src/pages/: mod.rs  weather_page.rs
src/services/: cache.rs  mod.rs  open_meteo.rs
src/utils/: mod.rs  weather_code.rs
